--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Collaborative 3D Tetris</title>
     <link href="tetris.css" rel="stylesheet"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+
 </head>
 <body>
 <button id="startButton" onclick="init()"
