--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -35,5 +35,9 @@
                 import('./startRemote.js')
             }
         </script>
+
+        <canvas id="fisheye"></canvas>
+
+        <script type="module" src="./fishEye/index.js"></script>
     </body>
 </html>
