--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -18,6 +18,7 @@
                 font-size: 300%;
                 font-weight: bold;
                 border: 2px solid cyan;
+                box-shadow: 0 0 10px 0 cyan;
                 border-radius: 0.5em;
                 place-self: center;
                 padding: 1em 3em;
