--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -86,6 +86,11 @@
                     </div>
                 </div>
             </div>
+            <div class="outrun-sun">
+              <div class="shimmer"></div>
+              <div class="shimmer"></div>
+              <div class="shimmer"></div>
+            </div>
         </div>
         <script type="module" src="./fishEye/index.js"></script>
     </body>
