style: refactor outrun

--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -83,6 +83,16 @@
                         <div class="hor"></div>
                         <div class="hor"></div>
                         <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
+                        <div class="hor"></div>
                     </div>
                 </div>
             </div>
