further optimize design for mobile, add font-family, split start button

--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <title>Collaborative 3D Tetris</title>
         <link href="tetris.css" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
         <meta
             name="viewport"
@@ -97,9 +101,9 @@
                 </div>
             </div>
             <div class="outrun-sun">
-              <div class="shimmer"></div>
-              <div class="shimmer"></div>
-              <div class="shimmer"></div>
+                <div class="shimmer"></div>
+                <div class="shimmer"></div>
+                <div class="shimmer"></div>
             </div>
         </div>
         <script type="module" src="./fishEye/index.js"></script>
