--- a/src/tetris/index.html
+++ b/src/tetris/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <title>Collaborative 3D Tetris</title>
         <link href="tetris.css" rel="stylesheet" />
+        <link rel="icon" type="image/png" href="/img/logo/tetris-logo.png" />
+
         <link
             href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
             rel="stylesheet"
@@ -19,13 +21,14 @@
             id="startButton"
             onclick="init()"
             style="
-                font-size: 300%;
+                font-size: 250%;
                 font-weight: bold;
                 border: 2px solid cyan;
                 box-shadow: 0 0 10px 0 cyan;
                 border-radius: 0.5em;
                 place-self: center;
                 padding: 1em 3em;
+                margin: 0 1em;
                 background-color: #fff2;
                 color: white;
             "
